--- a/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
+++ b/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
@@ -1,25 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="324.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.CommandPopupController">
+<AnchorPane prefHeight="556.0" prefWidth="593.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.PeopleInRelayRunPopupController">
    <children>
-      <Label layoutX="44.0" prefHeight="124.0" prefWidth="345.0" text="Создание команды" textFill="#305ec1">
+      <Label layoutX="41.0" prefHeight="124.0" prefWidth="345.0" text="Создание участника" textFill="#305ec1">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <Label layoutX="44.0" layoutY="110.0" text="Название">
+      <Label layoutX="41.0" layoutY="90.0" text="Фамилия">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="commandName" layoutX="44.0" layoutY="148.0" prefHeight="31.0" prefWidth="409.0" />
-      <Button fx:id="saveButt" layoutX="44.0" layoutY="228.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить" />
-      <Button fx:id="cancelButt" layoutX="199.0" layoutY="228.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <TextField fx:id="commandName" layoutX="41.0" layoutY="113.0" prefHeight="31.0" prefWidth="227.0" />
+      <Button fx:id="saveButt" layoutX="41.0" layoutY="493.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить" />
+      <Button fx:id="cancelButt" layoutX="196.0" layoutY="493.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <Label layoutX="41.0" layoutY="153.0" text="Имя">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="commandName1" layoutX="41.0" layoutY="178.0" prefHeight="31.0" prefWidth="227.0" />
+      <Label layoutX="41.0" layoutY="222.0" text="Отчество">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="commandName2" layoutX="41.0" layoutY="246.0" prefHeight="31.0" prefWidth="227.0" />
+      <Label layoutX="364.0" layoutY="153.0" text="Город">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="commandName3" layoutX="363.0" layoutY="178.0" prefHeight="31.0" prefWidth="181.0" />
+      <DatePicker layoutX="363.0" layoutY="113.0" prefHeight="31.0" prefWidth="181.0" />
+      <Label layoutX="367.0" layoutY="90.0" text="Дата рождения">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="58.0" layoutY="290.0" text="Пол">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <RadioButton layoutX="94.0" layoutY="294.0" mnemonicParsing="false" text="М">
+         <toggleGroup>
+            <ToggleGroup fx:id="gender" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton layoutX="144.0" layoutY="294.0" mnemonicParsing="false" text="Ж" toggleGroup="$gender" />
+      <Label layoutX="43.0" layoutY="322.0" text="Чип">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="commandName21" layoutX="42.0" layoutY="347.0" prefHeight="31.0" prefWidth="227.0" />
+      <Button fx:id="saveButt1" layoutX="42.0" layoutY="390.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="227.0" stylesheets="@css/AgreeButton.css" text="Зачитать чип" />
+      <ComboBox layoutX="363.0" layoutY="249.0" prefHeight="25.0" prefWidth="181.0" />
+      <Label layoutX="363.0" layoutY="222.0" text="Клуб">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <ComboBox layoutX="363.0" layoutY="315.0" prefHeight="25.0" prefWidth="181.0" />
+      <Label layoutX="361.0" layoutY="290.0" text="Разряд">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="364.0" layoutY="366.0" text="Стартовый номер">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="commandName31" layoutX="363.0" layoutY="393.0" prefHeight="31.0" prefWidth="181.0" />
    </children>
 </AnchorPane>
