--- a/src/main/resources/view/ClubsPopup.fxml
+++ b/src/main/resources/view/ClubsPopup.fxml
@@ -9,39 +9,39 @@
 
 <AnchorPane prefHeight="324.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.CommandPopupController">
    <children>
-      <Label contentDisplay="CENTER" layoutX="170.0" layoutY="19.0" prefHeight="31.0" prefWidth="195.0" text="Создание клуба" textFill="#4f6da8">
+      <Label layoutX="33.0" layoutY="66.0" prefHeight="25.0" prefWidth="131.0" text="Название клуба">
          <font>
-            <Font name="System Bold Italic" size="23.0" />
+            <Font size="16.0" />
          </font>
       </Label>
-      <Label layoutX="44.0" layoutY="58.0" prefHeight="25.0" prefWidth="131.0" text="Название клуба">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <TextField layoutX="44.0" layoutY="90.0" prefHeight="31.0" prefWidth="414.0" />
-      <Button layoutX="175.0" layoutY="273.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="131.0" stylesheets="@AgreeButton.css" text="Сохранить">
+      <TextField layoutX="33.0" layoutY="98.0" prefHeight="31.0" prefWidth="414.0" />
+      <Button layoutX="175.0" layoutY="273.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button layoutX="346.0" layoutY="273.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="131.0" stylesheets="@DisagreeButton.css" text="Отменить" />
-      <TextField layoutX="44.0" layoutY="162.0" prefHeight="31.0" prefWidth="414.0" />
-      <Label layoutX="44.0" layoutY="130.0" prefHeight="25.0" prefWidth="131.0" text="Тренер">
+      <Button layoutX="346.0" layoutY="273.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <TextField layoutX="30.0" layoutY="162.0" prefHeight="31.0" prefWidth="290.0" />
+      <Label layoutX="30.0" layoutY="130.0" prefHeight="25.0" prefWidth="131.0" text="Тренер">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Label layoutX="44.0" layoutY="217.0" prefHeight="25.0" prefWidth="70.0" text="Регион">
+      <Label layoutX="33.0" layoutY="217.0" prefHeight="25.0" prefWidth="70.0" text="Регион">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <ChoiceBox layoutX="122.0" layoutY="217.0" prefHeight="25.0" prefWidth="164.0" />
+      <ChoiceBox layoutX="111.0" layoutY="217.0" prefHeight="25.0" prefWidth="164.0" />
       <AnchorPane layoutX="313.0" layoutY="214.0" />
-      <Button layoutX="326.0" layoutY="217.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="147.0" text="Добавить регион">
+      <Button layoutX="323.0" layoutY="214.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="154.0" text="Добавить регион">
          <font>
-            <Font size="15.0" />
+            <Font size="16.0" />
          </font>
       </Button>
+      <Label contentDisplay="CENTER" layoutX="33.0" prefHeight="66.0" prefWidth="195.0" text="Создание клуба" textFill="#305ec1">
+         <font>
+            <Font name="System Bold" size="23.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
