--- a/src/main/resources/view/ClubPage.fxml
+++ b/src/main/resources/view/ClubPage.fxml
@@ -45,7 +45,7 @@
                      </rowConstraints>
                      <children>
                         <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="274.0" style="-fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-                        <Label prefHeight="26.0" prefWidth="102.0" text="Поиск группы:" textFill="#555555" GridPane.halignment="RIGHT">
+                        <Label prefHeight="26.0" prefWidth="102.0" text="Поиск клуба:" textFill="#555555" GridPane.halignment="RIGHT">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -58,9 +58,8 @@
                <columns>
                   <TableColumn prefWidth="57.60000169277191" resizable="false" text="№" />
                   <TableColumn prefWidth="268.00007247924805" resizable="false" text="Название" />
-                  <TableColumn prefWidth="316.7999267578125" text="Возраст от" />
-                  <TableColumn prefWidth="183.19998779296873" resizable="false" text="Возраст до" />
-                  <TableColumn prefWidth="183.19998779296873" resizable="false" text="Пол" />
+                  <TableColumn prefWidth="316.7999267578125" text="Тренер (представитель)" />
+                  <TableColumn prefWidth="183.19998779296873" resizable="false" text="Регион" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -79,11 +78,11 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #FFBB38; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Редактировать" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Button mnemonicParsing="false" onAction="#EditClub" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #FFBB38; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Редактировать" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #00C781; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Добавить клуб" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Button mnemonicParsing="false" onAction="#NewClub" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #00C781; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Добавить клуб" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font></Button>
