--- a/src/main/resources/view/ClubsPopup.fxml
+++ b/src/main/resources/view/ClubsPopup.fxml
@@ -7,20 +7,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="324.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.CommandPopupController">
+<AnchorPane prefHeight="324.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.ClubPopupController">
    <children>
       <Label layoutX="33.0" layoutY="66.0" prefHeight="25.0" prefWidth="131.0" text="Название клуба">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="33.0" layoutY="98.0" prefHeight="31.0" prefWidth="414.0" />
-      <Button layoutX="175.0" layoutY="273.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
+      <TextField fx:id="clubName" layoutX="33.0" layoutY="98.0" prefHeight="31.0" prefWidth="414.0" />
+      <Button layoutX="33.0" layoutY="273.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button layoutX="346.0" layoutY="273.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
-      <TextField layoutX="30.0" layoutY="162.0" prefHeight="31.0" prefWidth="290.0" />
+      <Button layoutX="204.0" layoutY="273.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <TextField fx:id="coach" layoutX="30.0" layoutY="162.0" prefHeight="31.0" prefWidth="290.0" />
       <Label layoutX="30.0" layoutY="130.0" prefHeight="25.0" prefWidth="131.0" text="Тренер">
          <font>
             <Font size="16.0" />
@@ -31,9 +31,9 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <ChoiceBox layoutX="111.0" layoutY="217.0" prefHeight="25.0" prefWidth="164.0" />
+      <ChoiceBox fx:id="region" layoutX="111.0" layoutY="217.0" prefHeight="25.0" prefWidth="164.0" />
       <AnchorPane layoutX="313.0" layoutY="214.0" />
-      <Button layoutX="323.0" layoutY="214.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="154.0" text="Добавить регион">
+      <Button fx:id="regionButt" layoutX="323.0" layoutY="214.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="154.0" text="Добавить регион">
          <font>
             <Font size="16.0" />
          </font>
