--- a/src/main/resources/view/DistancePage.fxml
+++ b/src/main/resources/view/DistancePage.fxml
@@ -54,12 +54,12 @@
                   </GridPane>
                </children>
             </GridPane>
-            <TableView fx:id="runTable" maxWidth="-Infinity" prefHeight="434.0" prefWidth="905.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <TableView fx:id="distancesTable" maxWidth="-Infinity" prefHeight="434.0" prefWidth="905.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <columns>
-                  <TableColumn fx:id="lastnameColumn" prefWidth="57.60000169277191" resizable="false" text="№" />
+                  <TableColumn fx:id="idColumn" prefWidth="57.60000169277191" resizable="false" text="№" />
                   <TableColumn fx:id="nameColumn" prefWidth="345.6000289916992" resizable="false" text="Название дистанции" />
-                  <TableColumn fx:id="middlenameColumn" prefWidth="97.5999755859375" text="Длина, метров" />
-                  <TableColumn fx:id="genderColumn" prefWidth="66.4000244140625" text="Набор высоты" />
+                  <TableColumn fx:id="lengthColumn" prefWidth="97.5999755859375" text="Длина, метров" />
+                  <TableColumn fx:id="heightColumn" prefWidth="66.4000244140625" text="Набор высоты" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
