--- a/src/main/resources/view/DistancePopup.fxml
+++ b/src/main/resources/view/DistancePopup.fxml
@@ -13,7 +13,7 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="distName" layoutX="33.0" layoutY="98.0" prefHeight="31.0" prefWidth="414.0" />
+      <TextField fx:id="distLocation" layoutX="33.0" layoutY="98.0" prefHeight="31.0" prefWidth="414.0" />
       <Button layoutX="30.0" layoutY="294.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
          <font>
             <Font size="14.0" />
