цветовая подсветка кнопок(пока тестовая)

--- a/src/main/resources/view/css/table.css
+++ b/src/main/resources/view/css/table.css
@@ -76,3 +76,12 @@
     -fx-background-radius : 0.0em;
 }
 
+.toggle-button {
+    -fx-background-color :#FAFAFA;
+    -fx-pref-width: 200px;
+    -fx-pref-height: 65px;
+     -fx-font-size:16px;
+}
+.toggle-button:selected{
+    -fx-background-color :black;
+    }
