--- a/src/main/resources/view/css/table.css
+++ b/src/main/resources/view/css/table.css
@@ -78,10 +78,14 @@
 
 .toggle-button {
     -fx-background-color :#FAFAFA;
-    -fx-pref-width: 180px;
+    -fx-pref-width: 190px;
     -fx-pref-height: 65px;
      -fx-font-size:16px;
 }
 .toggle-button:selected{
-    -fx-background-color :black;
+    -fx-background-color :#EDF1F8;
+    }
+.toggle-button:hover{
+    -fx-background-color :#EDF1F8;
+    -fx-transition: 3s;
     }
