--- a/src/main/resources/view/GroupPage.fxml
+++ b/src/main/resources/view/GroupPage.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1068.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.GroupPageController">
+<AnchorPane fx:id="main_pane" prefHeight="610.0" prefWidth="1090.0" style="-fx-background-color: ECF1FE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.GroupPageController">
    <children>
-      <GridPane layoutX="11.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="1068.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane layoutX="11.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="610.0" prefWidth="1090.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
@@ -37,8 +37,8 @@
                   <GridPane prefHeight="34.0" prefWidth="499.0" GridPane.columnIndex="1">
                      <columnConstraints>
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="256.4000244140625" minWidth="10.0" prefWidth="176.7999755859375" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="282.4000244140625" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="114.19995117187506" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="313.2" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="80.39999999999998" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
